[gd_scene load_steps=13 format=2]

[ext_resource path="res://Levels/TemplateLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Lightmaps/torchmap.png" type="Texture" id=2]
[ext_resource path="res://Doors/Door.tscn" type="PackedScene" id=3]
[ext_resource path="res://Loot/Briefcase.tscn" type="PackedScene" id=4]
[ext_resource path="res://Doors/LockedDoor.tscn" type="PackedScene" id=5]
[ext_resource path="res://Computer/Computer.tscn" type="PackedScene" id=6]
[ext_resource path="res://GFX/Interface/PNG/crossair_blueOutline.png" type="Texture" id=7]
[ext_resource path="res://Levels/Tutorial.gd" type="Script" id=8]
[ext_resource path="res://SFX/message.wav" type="AudioStream" id=9]
[ext_resource path="res://Interface/TutorialGUI.tscn" type="PackedScene" id=10]
[ext_resource path="res://Interface/MessageTemplate.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 87.0396, 64.8761 )

[node name="Tutorial" instance=ExtResource( 1 )]
script = ExtResource( 8 )

[node name="TileMap" parent="Navigation2D" index="0"]
tile_data = PoolIntArray( -589824, 3, 0, -589823, 3, 2, -589822, 3, 2, -589821, 3, 2, -589820, 3, 2, -589819, 3, 2, -589818, 3, 2, -589817, 3, 2, -589816, 3, 2, -589815, 3, 2, -589814, 3, 2, -589813, 3, 2, -589812, 3, 2, -589811, 3, 2, -589810, 3, 2, -589809, 3, 2, -589808, 3, 3, -589807, 3, 2, -589806, 3, 2, -589805, 3, 2, -589804, 3, 2, -589803, 3, 2, -589802, 3, 2, -589801, 3, 2, -589800, 3, 3, -589799, 3, 2, -589798, 3, 2, -589797, 3, 2, -589796, 3, 2, -589795, 3, 2, -589794, 3, 2, -589793, 3, 2, -589792, 3, 2, -589791, 3, 2, -589790, 3, 2, -589789, 3, 1, -524288, 3, 65538, -524287, 5, 0, -524286, 5, 0, -524285, 5, 0, -524284, 5, 0, -524283, 5, 0, -524282, 5, 0, -524281, 5, 0, -524280, 5, 0, -524279, 5, 0, -524278, 5, 0, -524277, 5, 0, -524276, 5, 0, -524275, 5, 0, -524274, 5, 0, -524273, 5, 0, -524272, 3, 65538, -524271, 5, 0, -524270, 5, 0, -524269, 5, 0, -524268, 5, 0, -524267, 5, 0, -524266, 5, 0, -524265, 5, 0, -524264, 3, 65538, -524263, 4, 0, -524262, 4, 0, -524261, 4, 0, -524260, 4, 0, -524259, 4, 0, -524258, 4, 0, -524257, 4, 0, -524256, 4, 0, -524255, 4, 0, -524254, 4, 0, -524253, 3, 65538, -458752, 3, 65538, -458751, 5, 0, -458750, 5, 1, -458749, 5, 1, -458748, 5, 0, -458747, 5, 1, -458746, 5, 0, -458745, 5, 1, -458744, 5, 1, -458743, 5, 0, -458742, 5, 0, -458741, 5, 0, -458740, 5, 0, -458739, 5, 0, -458738, 5, 0, -458737, 5, 0, -458736, 3, 65538, -458735, 5, 0, -458734, 5, 1, -458733, 5, 1, -458732, 5, 0, -458731, 5, 0, -458730, 5, 0, -458729, 5, 0, -458728, 3, 6, -458727, 4, 0, -458726, 4, 1, -458725, 4, 1, -458724, 4, 0, -458723, 4, 0, -458722, 4, 0, -458721, 4, 1, -458720, 4, 1, -458719, 4, 0, -458718, 4, 0, -458717, 3, 65538, -393216, 3, 65538, -393215, 5, 0, -393214, 5, 0, -393213, 5, 0, -393212, 5, 1, -393211, 5, 1, -393210, 5, 1, -393209, 5, 1, -393208, 5, 1, -393207, 5, 1, -393206, 5, 1, -393205, 5, 0, -393204, 5, 0, -393203, 5, 1, -393202, 5, 0, -393201, 5, 0, -393200, 3, 6, -393199, 5, 0, -393198, 5, 1, -393197, 5, 1, -393196, 5, 0, -393195, 5, 0, -393194, 5, 1, -393193, 5, 0, -393192, 4, 0, -393191, 4, 0, -393190, 4, 1, -393189, 4, 0, -393188, 4, 0, -393187, 4, 1, -393186, 4, 1, -393185, 4, 0, -393184, 4, 1, -393183, 4, 0, -393182, 4, 0, -393181, 3, 65538, -327680, 3, 65538, -327679, 5, 0, -327678, 5, 0, -327677, 5, 0, -327676, 5, 1, -327675, 5, 1, -327674, 5, 1, -327673, 5, 0, -327672, 5, 1, -327671, 5, 0, -327670, 5, 1, -327669, 5, 1, -327668, 5, 0, -327667, 5, 0, -327666, 5, 1, -327665, 5, 0, -327664, 5, 0, -327663, 5, 0, -327662, 5, 1, -327661, 5, 0, -327660, 5, 0, -327659, 5, 1, -327658, 5, 0, -327657, 5, 0, -327656, 3, 65541, -327655, 4, 0, -327654, 4, 0, -327653, 4, 0, -327652, 4, 1, -327651, 4, 0, -327650, 4, 1, -327649, 4, 1, -327648, 4, 0, -327647, 4, 0, -327646, 4, 0, -327645, 3, 65538, -262144, 3, 65538, -262143, 5, 0, -262142, 5, 0, -262141, 5, 0, -262140, 5, 0, -262139, 5, 0, -262138, 5, 0, -262137, 5, 1, -262136, 5, 1, -262135, 5, 0, -262134, 5, 0, -262133, 5, 1, -262132, 5, 1, -262131, 5, 1, -262130, 5, 1, -262129, 5, 0, -262128, 3, 65541, -262127, 5, 0, -262126, 5, 0, -262125, 5, 0, -262124, 5, 0, -262123, 5, 0, -262122, 5, 1, -262121, 5, 0, -262120, 3, 65538, -262119, 4, 0, -262118, 4, 0, -262117, 4, 0, -262116, 4, 0, -262115, 4, 0, -262114, 4, 1, -262113, 4, 0, -262112, 4, 0, -262111, 4, 0, -262110, 4, 0, -262109, 3, 65538, -196608, 3, 65538, -196607, 5, 0, -196606, 5, 1, -196605, 5, 1, -196604, 5, 0, -196603, 5, 0, -196602, 5, 0, -196601, 5, 1, -196600, 5, 1, -196599, 5, 0, -196598, 5, 0, -196597, 5, 1, -196596, 5, 1, -196595, 5, 1, -196594, 5, 0, -196593, 5, 0, -196592, 3, 65538, -196591, 5, 0, -196590, 5, 0, -196589, 5, 0, -196588, 5, 1, -196587, 5, 1, -196586, 5, 0, -196585, 5, 0, -196584, 3, 65538, -196583, 4, 0, -196582, 4, 0, -196581, 4, 0, -196580, 4, 0, -196579, 4, 0, -196578, 4, 0, -196577, 4, 0, -196576, 4, 0, -196575, 4, 0, -196574, 4, 0, -196573, 3, 65538, -131072, 3, 65538, -131071, 5, 0, -131070, 5, 0, -131069, 5, 0, -131068, 5, 0, -131067, 5, 0, -131066, 5, 0, -131065, 5, 0, -131064, 5, 0, -131063, 5, 0, -131062, 5, 0, -131061, 5, 0, -131060, 5, 0, -131059, 5, 0, -131058, 5, 0, -131057, 5, 0, -131056, 3, 65538, -131055, 5, 0, -131054, 5, 1, -131053, 5, 0, -131052, 5, 1, -131051, 5, 0, -131050, 5, 0, -131049, 5, 0, -131048, 3, 65536, -131047, 3, 2, -131046, 3, 3, -131045, 3, 2, -131044, 3, 2, -131043, 3, 2, -131042, 3, 2, -131041, 3, 2, -131040, 3, 2, -131039, 3, 3, -131038, 3, 2, -131037, 3, 65540, -65536, 3, 65539, -65535, 3, 2, -65534, 3, 2, -65533, 3, 2, -65532, 3, 2, -65531, 3, 2, -65530, 3, 2, -65529, 3, 5, -65528, 6, 0, -65527, 3, 65542, -65526, 3, 2, -65525, 3, 2, -65524, 3, 2, -65523, 3, 2, -65522, 3, 2, -65521, 3, 2, -65520, 3, 65540, -65519, 5, 0, -65518, 5, 1, -65517, 5, 1, -65516, 5, 0, -65515, 5, 1, -65514, 5, 0, -65513, 5, 0, -65512, 5, 0, -65511, 5, 0, -65510, 3, 65538, -65509, 5, 0, -65508, 5, 0, -65507, 5, 0, -65506, 5, 0, -65505, 5, 0, -65504, 5, 0, -65503, 3, 65538, -65502, 5, 0, -65501, 3, 65538, 0, 3, 65538, 1, 6, 0, 2, 6, 0, 3, 6, 0, 4, 6, 0, 5, 6, 0, 6, 6, 0, 7, 6, 0, 8, 6, 0, 9, 6, 0, 10, 6, 0, 11, 6, 0, 12, 6, 0, 13, 6, 0, 14, 6, 0, 15, 6, 0, 16, 3, 65538, 17, 5, 0, 18, 5, 0, 19, 5, 0, 20, 5, 0, 21, 5, 0, 22, 5, 0, 23, 5, 0, 24, 5, 1, 25, 5, 0, 26, 3, 65538, 27, 5, 0, 28, 5, 1, 29, 5, 0, 30, 5, 0, 31, 5, 0, 32, 5, 0, 33, 3, 65538, 34, 5, 0, 35, 3, 65538, 65536, 3, 65538, 65537, 6, 0, 65538, 6, 0, 65539, 6, 0, 65540, 6, 0, 65541, 6, 0, 65542, 6, 0, 65543, 6, 0, 65544, 6, 0, 65545, 6, 0, 65546, 6, 0, 65547, 6, 0, 65548, 6, 0, 65549, 6, 0, 65550, 6, 0, 65551, 6, 0, 65552, 3, 65538, 65553, 5, 0, 65554, 5, 1, 65555, 5, 0, 65556, 5, 0, 65557, 5, 1, 65558, 5, 1, 65559, 5, 0, 65560, 5, 0, 65561, 5, 0, 65562, 3, 65538, 65563, 5, 0, 65564, 5, 0, 65565, 5, 1, 65566, 5, 1, 65567, 5, 0, 65568, 5, 0, 65569, 3, 65538, 65570, 5, 0, 65571, 3, 65538, 131072, 3, 65538, 131073, 6, 0, 131074, 6, 0, 131075, 6, 0, 131076, 6, 0, 131077, 6, 0, 131078, 6, 0, 131079, 6, 0, 131080, 6, 0, 131081, 6, 0, 131082, 6, 0, 131083, 6, 0, 131084, 6, 0, 131085, 6, 0, 131086, 6, 0, 131087, 6, 0, 131088, 3, 65538, 131089, 5, 0, 131090, 5, 1, 131091, 5, 0, 131092, 5, 0, 131093, 5, 0, 131094, 5, 0, 131095, 5, 1, 131096, 5, 0, 131097, 3, 65542, 131098, 3, 65540, 131099, 5, 0, 131100, 5, 1, 131101, 5, 0, 131102, 5, 1, 131103, 5, 0, 131104, 5, 0, 131105, 3, 65538, 131106, 5, 0, 131107, 3, 65538, 196608, 3, 65538, 196609, 6, 0, 196610, 6, 0, 196611, 6, 0, 196612, 6, 0, 196613, 6, 0, 196614, 6, 0, 196615, 6, 0, 196616, 6, 0, 196617, 6, 0, 196618, 6, 0, 196619, 6, 0, 196620, 6, 0, 196621, 6, 0, 196622, 6, 0, 196623, 6, 0, 196624, 3, 65538, 196625, 5, 0, 196626, 5, 1, 196627, 5, 0, 196628, 5, 1, 196629, 5, 1, 196630, 5, 1, 196631, 5, 0, 196632, 5, 0, 196633, 5, 0, 196634, 3, 65538, 196635, 5, 0, 196636, 5, 0, 196637, 5, 0, 196638, 5, 1, 196639, 5, 1, 196640, 5, 0, 196641, 3, 65538, 196642, 5, 0, 196643, 3, 65538, 262144, 3, 65538, 262145, 6, 0, 262146, 6, 0, 262147, 6, 0, 262148, 6, 0, 262149, 6, 0, 262150, 6, 0, 262151, 6, 0, 262152, 6, 0, 262153, 6, 0, 262154, 6, 0, 262155, 6, 0, 262156, 6, 0, 262157, 6, 0, 262158, 6, 0, 262159, 6, 0, 262160, 3, 65538, 262161, 5, 0, 262162, 5, 1, 262163, 5, 0, 262164, 5, 0, 262165, 5, 0, 262166, 5, 0, 262167, 5, 0, 262168, 5, 0, 262169, 5, 0, 262170, 3, 6, 262171, 5, 0, 262172, 5, 0, 262173, 5, 0, 262174, 5, 0, 262175, 5, 1, 262176, 5, 0, 262177, 3, 6, 262178, 5, 0, 262179, 3, 65538, 327680, 3, 65538, 327681, 6, 0, 327682, 6, 0, 327683, 6, 0, 327684, 6, 0, 327685, 6, 0, 327686, 6, 0, 327687, 6, 0, 327688, 6, 0, 327689, 6, 0, 327690, 6, 0, 327691, 6, 0, 327692, 6, 0, 327693, 6, 0, 327694, 6, 0, 327695, 6, 0, 327696, 3, 65538, 327697, 5, 0, 327698, 5, 1, 327699, 5, 0, 327700, 5, 0, 327701, 3, 65541, 327702, 5, 0, 327703, 5, 1, 327704, 5, 0, 327705, 5, 0, 327706, 5, 0, 327707, 5, 0, 327708, 5, 0, 327709, 3, 65541, 327710, 5, 0, 327711, 5, 1, 327712, 5, 0, 327713, 5, 0, 327714, 5, 0, 327715, 3, 65538, 393216, 3, 65538, 393217, 6, 0, 393218, 6, 0, 393219, 6, 0, 393220, 6, 0, 393221, 6, 0, 393222, 6, 0, 393223, 6, 0, 393224, 6, 0, 393225, 6, 0, 393226, 6, 0, 393227, 6, 0, 393228, 6, 0, 393229, 6, 0, 393230, 6, 0, 393231, 6, 0, 393232, 3, 65538, 393233, 5, 0, 393234, 5, 0, 393235, 5, 0, 393236, 5, 0, 393237, 3, 65538, 393238, 5, 0, 393239, 5, 0, 393240, 5, 1, 393241, 5, 0, 393242, 5, 1, 393243, 5, 1, 393244, 5, 0, 393245, 3, 65538, 393246, 5, 0, 393247, 5, 1, 393248, 5, 1, 393249, 5, 0, 393250, 5, 0, 393251, 3, 65538, 458752, 3, 65538, 458753, 6, 0, 458754, 6, 0, 458755, 6, 0, 458756, 6, 0, 458757, 6, 0, 458758, 6, 0, 458759, 6, 0, 458760, 6, 0, 458761, 6, 0, 458762, 6, 0, 458763, 6, 0, 458764, 6, 0, 458765, 6, 0, 458766, 6, 0, 458767, 6, 0, 458768, 3, 65538, 458769, 5, 0, 458770, 5, 0, 458771, 5, 1, 458772, 5, 0, 458773, 3, 65538, 458774, 5, 0, 458775, 5, 1, 458776, 5, 1, 458777, 5, 0, 458778, 5, 0, 458779, 5, 0, 458780, 5, 0, 458781, 3, 65538, 458782, 5, 0, 458783, 5, 0, 458784, 5, 0, 458785, 5, 1, 458786, 5, 0, 458787, 3, 65538, 524288, 3, 65538, 524289, 6, 0, 524290, 6, 0, 524291, 6, 0, 524292, 6, 0, 524293, 6, 0, 524294, 6, 0, 524295, 6, 0, 524296, 6, 0, 524297, 6, 0, 524298, 6, 0, 524299, 6, 0, 524300, 6, 0, 524301, 6, 0, 524302, 6, 0, 524303, 6, 0, 524304, 3, 65538, 524305, 5, 0, 524306, 5, 0, 524307, 5, 0, 524308, 5, 0, 524309, 3, 65538, 524310, 5, 0, 524311, 5, 0, 524312, 5, 0, 524313, 5, 0, 524314, 5, 0, 524315, 5, 0, 524316, 5, 0, 524317, 3, 65538, 524318, 5, 0, 524319, 5, 0, 524320, 5, 0, 524321, 5, 0, 524322, 5, 0, 524323, 3, 65538, 589824, 3, 65536, 589825, 3, 2, 589826, 3, 2, 589827, 3, 2, 589828, 3, 2, 589829, 3, 2, 589830, 3, 2, 589831, 3, 2, 589832, 3, 2, 589833, 3, 2, 589834, 3, 2, 589835, 3, 2, 589836, 3, 2, 589837, 3, 2, 589838, 3, 3, 589839, 3, 2, 589840, 3, 4, 589841, 3, 2, 589842, 3, 2, 589843, 3, 2, 589844, 3, 2, 589845, 3, 4, 589846, 3, 2, 589847, 3, 2, 589848, 3, 2, 589849, 3, 2, 589850, 3, 2, 589851, 3, 2, 589852, 3, 2, 589853, 3, 4, 589854, 3, 2, 589855, 3, 5, 589856, 6, 0, 589857, 6, 0, 589858, 3, 65542, 589859, 3, 65540, 655374, 3, 65538, 655375, 6, 0, 655376, 6, 0, 655377, 6, 0, 655378, 6, 0, 655379, 6, 0, 655380, 6, 0, 655381, 6, 0, 655382, 6, 0, 655383, 6, 0, 655384, 6, 0, 655385, 6, 0, 655386, 6, 0, 655387, 6, 0, 655388, 6, 0, 655389, 6, 0, 655390, 6, 0, 655391, 6, 0, 655392, 6, 0, 655393, 6, 0, 655394, 6, 0, 655395, 3, 65538, 720910, 3, 65538, 720911, 6, 0, 720912, 6, 0, 720913, 6, 0, 720914, 6, 0, 720915, 6, 0, 720916, 6, 0, 720917, 6, 0, 720918, 6, 0, 720919, 6, 0, 720920, 6, 0, 720921, 6, 0, 720922, 6, 0, 720923, 6, 0, 720924, 6, 0, 720925, 6, 0, 720926, 6, 0, 720927, 6, 0, 720928, 6, 0, 720929, 6, 0, 720930, 6, 0, 720931, 3, 65538, 786446, 3, 65538, 786447, 6, 0, 786448, 6, 0, 786449, 6, 0, 786450, 6, 0, 786451, 6, 0, 786452, 6, 0, 786453, 6, 0, 786454, 6, 0, 786455, 6, 0, 786456, 6, 0, 786457, 6, 0, 786458, 6, 0, 786459, 6, 0, 786460, 6, 0, 786461, 6, 0, 786462, 6, 0, 786463, 6, 0, 786464, 6, 0, 786465, 6, 0, 786466, 6, 0, 786467, 3, 65538, 851982, 3, 65538, 851983, 6, 0, 851984, 6, 0, 851985, 6, 0, 851986, 6, 0, 851987, 6, 0, 851988, 6, 0, 851989, 6, 0, 851990, 6, 0, 851991, 6, 0, 851992, 6, 0, 851993, 6, 0, 851994, 6, 0, 851995, 6, 0, 851996, 6, 0, 851997, 6, 0, 851998, 6, 0, 851999, 6, 0, 852000, 6, 0, 852001, 6, 0, 852002, 6, 0, 852003, 3, 65538, 917518, 3, 65538, 917519, 6, 0, 917520, 6, 0, 917521, 6, 0, 917522, 6, 0, 917523, 6, 0, 917524, 6, 0, 917525, 6, 0, 917526, 6, 0, 917527, 6, 0, 917528, 6, 0, 917529, 6, 0, 917530, 6, 0, 917531, 6, 0, 917532, 6, 0, 917533, 6, 0, 917534, 6, 0, 917535, 6, 0, 917536, 6, 0, 917537, 6, 0, 917538, 6, 0, 917539, 3, 65538, 983054, 3, 65538, 983055, 6, 0, 983056, 6, 0, 983057, 6, 0, 983058, 6, 0, 983059, 6, 0, 983060, 6, 0, 983061, 6, 0, 983062, 6, 0, 983063, 6, 0, 983064, 6, 0, 983065, 6, 0, 983066, 6, 0, 983067, 6, 0, 983068, 6, 0, 983069, 6, 0, 983070, 6, 0, 983071, 6, 0, 983072, 6, 0, 983073, 6, 0, 983074, 6, 0, 983075, 3, 65538, 1048590, 3, 65538, 1048591, 6, 0, 1048592, 6, 0, 1048593, 6, 0, 1048594, 6, 0, 1048595, 6, 0, 1048596, 6, 0, 1048597, 6, 0, 1048598, 6, 0, 1048599, 6, 0, 1048600, 6, 0, 1048601, 6, 0, 1048602, 6, 0, 1048603, 6, 0, 1048604, 6, 0, 1048605, 6, 0, 1048606, 6, 0, 1048607, 6, 0, 1048608, 6, 0, 1048609, 6, 0, 1048610, 6, 0, 1048611, 3, 65538, 1114126, 3, 65538, 1114127, 6, 0, 1114128, 6, 0, 1114129, 6, 0, 1114130, 6, 0, 1114131, 6, 0, 1114132, 6, 0, 1114133, 6, 0, 1114134, 6, 0, 1114135, 6, 0, 1114136, 6, 0, 1114137, 6, 0, 1114138, 6, 0, 1114139, 6, 0, 1114140, 6, 0, 1114141, 6, 0, 1114142, 6, 0, 1114143, 6, 0, 1114144, 6, 0, 1114145, 6, 0, 1114146, 6, 0, 1114147, 3, 65538, 1179662, 3, 65538, 1179663, 6, 0, 1179664, 6, 0, 1179665, 6, 0, 1179666, 6, 0, 1179667, 6, 0, 1179668, 6, 0, 1179669, 6, 0, 1179670, 6, 0, 1179671, 6, 0, 1179672, 6, 0, 1179673, 6, 0, 1179674, 6, 0, 1179675, 6, 0, 1179676, 6, 0, 1179677, 6, 0, 1179678, 6, 0, 1179679, 6, 0, 1179680, 6, 0, 1179681, 6, 0, 1179682, 6, 0, 1179683, 3, 65538, 1245198, 3, 65538, 1245199, 6, 0, 1245200, 6, 0, 1245201, 6, 0, 1245202, 6, 0, 1245203, 6, 0, 1245204, 6, 0, 1245205, 6, 0, 1245206, 6, 0, 1245207, 6, 0, 1245208, 6, 0, 1245209, 6, 0, 1245210, 6, 0, 1245211, 6, 0, 1245212, 6, 0, 1245213, 6, 0, 1245214, 6, 0, 1245215, 6, 0, 1245216, 6, 0, 1245217, 6, 0, 1245218, 6, 0, 1245219, 3, 65538, 1310734, 3, 65538, 1310735, 6, 0, 1310736, 6, 0, 1310737, 6, 0, 1310738, 6, 0, 1310739, 6, 0, 1310740, 6, 0, 1310741, 6, 0, 1310742, 6, 0, 1310743, 6, 0, 1310744, 6, 0, 1310745, 6, 0, 1310746, 6, 0, 1310747, 6, 0, 1310748, 6, 0, 1310749, 6, 0, 1310750, 6, 0, 1310751, 6, 0, 1310752, 6, 0, 1310753, 6, 0, 1310754, 6, 0, 1310755, 3, 65538, 1376270, 3, 65536, 1376271, 3, 2, 1376272, 3, 2, 1376273, 3, 2, 1376274, 3, 2, 1376275, 3, 2, 1376276, 3, 2, 1376277, 3, 2, 1376278, 3, 2, 1376279, 3, 2, 1376280, 3, 2, 1376281, 3, 2, 1376282, 3, 2, 1376283, 3, 2, 1376284, 3, 2, 1376285, 3, 2, 1376286, 3, 2, 1376287, 3, 2, 1376288, 3, 2, 1376289, 3, 2, 1376290, 3, 2, 1376291, 3, 65537 )

[node name="Furniture" parent="Navigation2D" index="2"]
tile_data = PoolIntArray( -524284, 1610612742, 0, -524268, 1610612743, 0, -524267, 1610612744, 0, -524266, 1610612745, 0, -524256, 12, 0, -524255, 12, 0, -524254, 12, 0, -458749, 1610612737, 0, -458748, 1610612738, 0, -458747, 1, 0, -458734, -1073741823, 0, -393207, 1610612742, 0, -393205, 1610612742, 0, -393203, 1610612742, 0, -393199, -1610612730, 0, -393198, -1610612734, 0, -327677, 5, 0, -327676, 5, 0, -327675, 5, 0, -327673, -1610612730, 0, -327672, 3, 0, -327671, 2, 0, -327670, 2, 0, -327669, 2, 0, -327668, 2, 0, -327667, 2, 0, -327666, 1, 0, -327662, -1610612735, 0, -327660, 6, 0, -327658, 6, 0, -262135, 6, 0, -262133, 6, 0, -262131, 6, 0, 65555, 3, 0, 65556, 2, 0, 65557, 1, 0, 524305, 5, 0, 524307, 5, 0, 655375, 1610612740, 0, 655376, 1610612740, 0, 655377, 1610612740, 0, 655378, 1610612740, 0, 786447, 1610612740, 0, 786448, 1610612740, 0, 786449, 1610612740, 0, 786450, 1610612740, 0, 786466, 0, 0, 852002, -1073741818, 0, 917519, 1610612740, 0, 917520, 1610612740, 0, 917521, 1610612740, 0, 917522, 1610612740, 0, 917538, -1073741818, 0, 983074, -1073741818, 0, 1048610, 0, 0, 1310742, 9, 0, 1310743, 8, 0, 1310744, 7, 0, 1310745, 0, 0, 1310746, 0, 0, 1310747, 9, 0, 1310748, 8, 0, 1310749, 7, 0 )

[node name="Door" parent="Doors" index="0" instance=ExtResource( 3 )]
position = Vector2( 543.546, -54.5513 )

[node name="LockedDoor" parent="LockedDoors" index="0" instance=ExtResource( 5 )]
position = Vector2( 2114.28, 587.749 )
lock_group = "1"

[node name="Computer" parent="Computers" index="0" instance=ExtResource( 6 )]
position = Vector2( 1934.04, 488.761 )

[node name="Briefcase" parent="Loot" index="0" instance=ExtResource( 4 )]
position = Vector2( 1351.41, 952.262 )

[node name="Exit" parent="." index="11"]
margin_left = 2060.38
margin_top = 1243.21
margin_right = 2211.38
margin_bottom = 1314.21
lose_without_loot = false

[node name="Light2D" type="Light2D" parent="." index="12"]
position = Vector2( 72.7549, 10.5983 )
rotation = 0.503611
texture = ExtResource( 2 )
offset = Vector2( 300, 0 )
shadow_enabled = true

[node name="Light2D2" type="Light2D" parent="." index="13"]
position = Vector2( 1012.5, 10.5983 )
rotation = 2.4242
texture = ExtResource( 2 )
offset = Vector2( 300, 0 )
shadow_enabled = true

[node name="Light2D3" type="Light2D" parent="." index="14"]
position = Vector2( 74.3423, 556.664 )
rotation = -0.690907
texture = ExtResource( 2 )
offset = Vector2( 300, 0 )
shadow_enabled = true

[node name="Light2D4" type="Light2D" parent="." index="15"]
position = Vector2( 1001.38, 575.713 )
rotation = -2.36271
texture = ExtResource( 2 )
offset = Vector2( 300, 0 )
shadow_enabled = true

[node name="Light2D5" type="Light2D" parent="." index="16"]
position = Vector2( 535.862, 232.334 )
rotation = -1.5708
texture = ExtResource( 2 )
offset = Vector2( 300, 0 )
shadow_enabled = true
shadow_item_cull_mask = 0

[node name="Light2D6" type="Light2D" parent="." index="17"]
position = Vector2( 1349.5, 1340.65 )
rotation = -1.5708
texture = ExtResource( 2 )
offset = Vector2( 300, 0 )
shadow_enabled = true

[node name="ObjectiveAreas" type="Node" parent="." index="18"]

[node name="MoveObjective" type="Area2D" parent="ObjectiveAreas" index="0"]
position = Vector2( 515.844, 292.259 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/MoveObjective" index="0"]
position = Vector2( 0.0473022, -0.000919342 )
shape = SubResource( 1 )

[node name="DoorObjective" type="Area2D" parent="ObjectiveAreas" index="1"]
position = Vector2( 542.334, 21.3451 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/DoorObjective" index="0"]
position = Vector2( 0.0473022, -0.000919342 )
shape = SubResource( 1 )

[node name="NightvisionObjective" type="Area2D" parent="ObjectiveAreas" index="2"]
position = Vector2( 387.609, -167.016 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/NightvisionObjective" index="0"]
position = Vector2( 0.0473022, -0.000919342 )
shape = SubResource( 1 )

[node name="LockedDoorObjective" type="Area2D" parent="ObjectiveAreas" index="3"]
position = Vector2( 2102.03, 496.376 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/LockedDoorObjective" index="0"]
position = Vector2( 0.0473022, -0.000919342 )
shape = SubResource( 1 )

[node name="BriefcaseObjective" type="Area2D" parent="ObjectiveAreas" index="4"]
position = Vector2( 1342.74, 954.169 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/BriefcaseObjective" index="0"]
position = Vector2( 0.0473022, -0.000919342 )
shape = SubResource( 1 )

[node name="ObjectivePositions" type="Node" parent="." index="19"]

[node name="MoveObjective" type="Position2D" parent="ObjectivePositions" index="0"]
position = Vector2( 548.496, 74.0832 )

[node name="DoorObjective" type="Position2D" parent="ObjectivePositions" index="1"]
position = Vector2( 542.602, -54.084 )

[node name="NightvisionObjective" type="Position2D" parent="ObjectivePositions" index="2"]
position = Vector2( 388.624, -166.79 )

[node name="LockedDoorObjective" type="Position2D" parent="ObjectivePositions" index="3"]
position = Vector2( 1933.84, 493.682 )

[node name="BriefcaseObjective" type="Position2D" parent="ObjectivePositions" index="4"]
position = Vector2( 1342.25, 956.307 )

[node name="ObjectiveMessages" type="Node" parent="." index="20"]

[node name="WelcomeMessage" parent="ObjectiveMessages" index="0" instance=ExtResource( 11 )]
message = "Welcome to your training to become a master thief. Let's start with the basics. You can use [W] [A] [S] [D] or Arrows to move. You will have to avoid security cameras and guards on your real missions but we have removed them for your training. Please proceed to the next target."

[node name="DoorMessage" parent="ObjectiveMessages" index="1" instance=ExtResource( 11 )]
message = "You can go through doors and interact with other objects by left-clicking on them with your mouse."

[node name="NightvisionMessage" parent="ObjectiveMessages" index="2" instance=ExtResource( 11 )]
message = "It is usually dark on missions so we have equipped you with state-of-the-art nightvision. Just press [SPACE] to use it. If you're not in nightvision mode, you disguise yourself by pressing [E]."

[node name="LockedDoorMessage" parent="ObjectiveMessages" index="3" instance=ExtResource( 11 )]
message = "Some doors are locked so you need to steal a code from a computer. Then you can enter it on the door's keypad."

[node name="LootMessage" parent="ObjectiveMessages" index="4" instance=ExtResource( 11 )]
message = "Before you leave, you have to grab the briefcase. You can collect it by simply walking to it. Afterwards, you can make your way to the green exit. You will fail your mission if you go through the exit without the briefcase but don't worry this is just training."

[node name="ObjectiveMarker" type="Sprite" parent="." index="21"]
position = Vector2( 561.89, 308.785 )
z_index = 2
texture = ExtResource( 7 )

[node name="Light2D" type="Light2D" parent="ObjectiveMarker" index="0"]
texture = ExtResource( 7 )

[node name="Tween" type="Tween" parent="." index="22"]

[node name="ObjectiveSound" type="AudioStreamPlayer" parent="." index="23"]
stream = ExtResource( 9 )

[node name="TutorialGUI" parent="." index="24" instance=ExtResource( 10 )]
[connection signal="body_entered" from="ObjectiveAreas/MoveObjective" to="." method="_on_MoveObjective_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/DoorObjective" to="." method="_on_DoorObjective_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/NightvisionObjective" to="." method="_on_NightvisionObjective_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/LockedDoorObjective" to="." method="_on_LockedDoorObjective_body_entered"]
[connection signal="body_entered" from="ObjectiveAreas/BriefcaseObjective" to="." method="_on_BriefcaseObjective_body_entered"]
